//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table accounts {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user users [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table sessions {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user users [not null]
}

Table users {
  id String [pk]
  name String
  email String [unique, not null]
  emailVerified DateTime
  image String
  accounts accounts [not null]
  sessions sessions [not null]
  Authenticator Authenticator [not null]
}

Table verificationtokens {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Authenticator {
  id String [pk]
  credentialID String [unique, not null]
  userId String [not null]
  providerAccountId String [not null]
  credentialPublicKey String [not null]
  counter Int [not null]
  credentialDeviceType String [not null]
  credentialBackedUp Boolean [not null]
  transports String
  user users [not null]
}

Ref: accounts.userId > users.id [delete: Cascade]

Ref: sessions.userId > users.id [delete: Cascade]

Ref: Authenticator.userId > users.id [delete: Cascade]